# Cars-price-prediction

./: .gitignore  README.md  car-price-prediction.ipynb  car_price_model.pkl  pyproject.toml
